fixed scroll sidebar so that edit element popup is now visible and added drag drop procedure re-ordering

--- a/src/components/PatternEditor/components/ElementsList/elements-list.scss
+++ b/src/components/PatternEditor/components/ElementsList/elements-list.scss
@@ -19,6 +19,9 @@
             width: 110px;
         }
     }
+
+    .geometry.editting {
+    }
     .ui.message {
         width: 297px;
         padding: 3px;
