--- a/src/components/PatternEditor/components/Sidebar/sidebar.scss
+++ b/src/components/PatternEditor/components/Sidebar/sidebar.scss
@@ -62,7 +62,7 @@
     .slide-panel {
         position: relative;
         left: 0px;
-        max-width: 310px;
+        width: calc(100vw - 20px);
         overflow: hidden;
         height: calc(100vh - 41px);
         transition: left 0.5s;
@@ -85,18 +85,16 @@
             left: -420px;
         }
         .scroll-container {
-            width: 330px;
+            width: calc(100vw - 0px);
             max-height: calc( 100vh - 41px );
             padding-top: 20px;
-            padding-bottom: 200px;
+            padding-bottom: 0px;
             overflow-y: scroll;
-            pointer-events: initial;
-            .elements-list {
-                pointer-events: none;
-                .ui.list {
-                    max-width: 250px;
-                    margin: 0px;
-                }
+            pointer-events: none;
+            & > div {
+                width: 330px !important;
+                pointer-events: auto;
+                max-width: 330px !important;
             }
             .elements-simulation-list {
                 pointer-events: initial;
